infra/authentik/outpost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outpost-draw
  namespace: authentik
spec:
  ingressClassName: traefik
  rules:
    - host: draw.shedy.xyz
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
